examples/test/testpolicy6382.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6382
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key11: value20
      key12: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value23
          key23: value8
          key7: value48
      podSelector:
        matchLabels:
          key27: value34
          key1: value21
